--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "algorea-forum",
-  "version": "0.0.1",
-  "description": "Algorea Forum",
+  "name": "algorea-serverless",
+  "version": "2.0.0",
+  "description": "Algorea Serverless",
   "main": "index.js",
   "scripts": {
     "start": "sls offline start",
@@ -12,46 +12,40 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/France-ioi/AlgoreaForum.git"
+    "url": "git+https://github.com/France-ioi/AlgoreaServerless.git"
   },
-  "keywords": [
-    "Algorea",
-    "Forum",
-    "Backend"
-  ],
   "author": "France IOI",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/France-ioi/AlgoreaForum/issues"
+    "url": "https://github.com/France-ioi/AlgoreaServerless/issues"
   },
-  "homepage": "https://github.com/France-ioi/AlgoreaForum#readme",
+  "homepage": "https://github.com/France-ioi/AlgoreaServerless#readme",
   "dependencies": {
-    "@aws-sdk/client-apigatewaymanagementapi": "^3.105.0",
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.899.0",
     "@aws-sdk/client-dynamodb": "^3.100.0",
     "@smithy/util-utf8": "^2.0.0",
     "@types/aws-lambda": "^8.10.95",
-    "fp-ts": "^2.5.0",
-    "io-ts": "^2.2.16",
-    "jose": "^4.14.4"
+    "jose": "^4.14.4",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@shelf/jest-dynamodb": "^2.2.4",
     "@types/jest": "^27.5.1",
     "@types/serverless": "^3.12.3",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "dynamodb-local": "^0.0.31",
-    "eslint": "^8.16.0",
+    "eslint": "^8.53.0",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
-    "serverless": "^3.16.0",
+    "serverless": "^3.39.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-typescript": "^2.1.2",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
-    "typescript": "^4.6.4",
+    "typescript": "~5.5.4",
     "wscat": "^5.1.0"
   }
 }
