--- a/tsconfig.json
+++ b/tsconfig.json
@@ -92,5 +92,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "includes": ["src/", "jest.config.ts"],
+  "include": ["src/", "jest.config.ts"],
 }
