--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@smithy/util-utf8": "^2.0.0",
     "@types/aws-lambda": "^8.10.95",
     "jose": "^4.14.4",
+    "lambda-api": "^1.2.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
