--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-typescript": "^2.1.2",
+    "serverless-prune-plugin": "^2.1.0",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "~5.5.4",
