--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,39 @@ jobs:
     - image: node:20-alpine
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - npm-deps-v1-{{ checksum "package-lock.json" }}
+            - npm-deps-v1-
       - run: npm install
+      - save_cache:
+          key: npm-deps-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - run: npm run test
+
+  lint:
+    docker:
+    - image: node:20-alpine
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - npm-deps-v1-{{ checksum "package-lock.json" }}
+            - npm-deps-v1-
+      - run: npm install
+      - save_cache:
+          key: npm-deps-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run: npm run lint
 
 workflows:
   version: 2
   default:
     jobs:
       - tests
+      - lint
       - github-release:
           context: github
           filters:
