--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ jspm_packages
 # Local Cursor configuration (user-specific, not committed)
 .cursor/rules/local.mdc
 .cursor/features/*
+
+# DynamoDB Local
+.dynamodb/
