--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/serverless": "^3.12.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.53.0",
@@ -39,12 +40,14 @@
     "jest": "^30.2.0",
     "lint-staged": "^12.4.1",
     "serverless": "^3.39.0",
+    "serverless-dynamodb": "^0.2.56",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-typescript": "^2.1.2",
     "serverless-prune-plugin": "^2.1.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.8.0",
     "typescript": "~5.5.4",
+    "uuid": "^13.0.0",
     "wscat": "^5.1.0"
   }
 }
