--- a/db/dynamodb.cloudformation.yaml
+++ b/db/dynamodb.cloudformation.yaml
@@ -12,11 +12,11 @@ Resources:
       AttributeDefinitions:
         - AttributeName: pk
           AttributeType: S
-        - AttributeName: time
+        - AttributeName: sk
           AttributeType: "N"
       KeySchema:
         - AttributeName: pk
           KeyType: HASH
-        - AttributeName: ts
+        - AttributeName: sk
           KeyType: RANGE
 Outputs: {}
