--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,28 @@ jobs:
 
   tests:
     docker:
-    - image: node:20-alpine
+    - image: node:20
     steps:
       - checkout
+      - run:
+          name: Install OpenJDK 17 for DynamoDB Local
+          command: |
+            apt-get update
+            apt-get install -y openjdk-17-jre-headless
+            java -version
       - restore_cache:
           keys:
             - npm-deps-v1-{{ checksum "package-lock.json" }}
             - npm-deps-v1-
       - run: npm install
+      - run:
+          name: Install DynamoDB Local
+          command: npm run dynamodb:install
       - save_cache:
           key: npm-deps-v1-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
+            - .dynamodb
       - run: npm run test
 
   lint:
